--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <!-- css file -->
     <link rel="stylesheet" href="../style/styl.css">
+    <script src="../node_modules/persian-date/dist/persian-date.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="clock">
