add analog to project (html css js) and add font to project

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,17 @@
     <script src="../node_modules/persian-date/dist/persian-date.js" type="text/javascript"></script>
 </head>
 <body>
-    <div class="clock">
-       <div class="hour"></div>
-       <div class="minute"></div>
-       <div class="second"></div>
+    <div>
+        <div class="clock">
+           <div class="hour"></div>
+           <div class="minute"></div>
+           <div class="second"></div>
+        </div>
+        <div class="conainer">
+            <div class="hclock"></div>
+            <div class="hclock"></div>
+            <div class="hclock"></div>
+        </div>
     </div>
     <!-- js file -->
     <script src="../script/index.js"></script>
